<resources>
    <string name="app_name">RPS AndroidApp</string>
    <string name="Rock">Rock</string>
    <string name="Score">0 | 0</string>
    <string name="Scoreh1">Score</string>
    <string name="ChooseRock">Choose rock!</string>
    <string name="Paper">Paper</string>
    <string name="ChoosePaper">Choose Paper!</string>
    <string name="ChooseScissors">Choose Scissors!</string>
    <string name="Scissors">Scissors</string>
    <string name="WinnerIs">And the winner is...</string>
</resources>
